# leadstack

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test_leads.csv
client/: auth-utils.js  dashboard.html  get-started.html  index.html  login.html  steve.html
src/ai/: endpoints.py
src/auth/: endpoints.py  models.py  schemas.py
src/core/: config.py  db.py  enums.py  security.py  utils.py
src/dashboard/: endpoints.py
src/leads/: endpoints.py  models.py  schemas.py
src/notes/: endpoints.py  models.py  schemas.py
src/notifications/: models.py
static/: auth-utils.js
tests/stress_tests/: __init__.py  config.py  run_all_tests.py  test_ai_stress.py  test_auth_stress.py  test_concurrent_users.py  test_leads_stress.py  test_notes_stress.py
