[project]
name = "leadstack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "fastapi-sso>=0.21.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "psycopg2>=2.9.12",
    "pydantic-ai>=1.97.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.28",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
]
